@@ -93,14 +93,22 @@ Turns your XBMC into an instant free on-demand media-center. Stream and download
     </extension>
 </addon>
 
-<addon id="repository.eldorado" name="Eldorado's XBMC Addons" version="1.0.2" provider-name="eldorado">
+<addon id="repository.eldorado" name="Eldorado's XBMC Addons" version="2.0.0" provider-name="eldorado">
 	<extension point="xbmc.addon.repository" name="Eldorado's XBMC Addon Repository">
-		<info compressed="false">https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/addons.xml</info>
-		<checksum>https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/addons.xml.md5</checksum>
-		<datadir zip="true">https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/repo/</datadir>
+		<dir>
+			<info compressed="false">https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/addons.xml</info>
+			<checksum>https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/addons.xml.md5</checksum>
+			<datadir zip="true">https://github.com/Eldorados/eldorado-xbmc-addons/raw/master/repo/</datadir>
+		</dir>
+		<dir>
+			<info compressed="false">https://offshoregit.com/Eldorado/xbmc-addons/raw/master/addons.xml</info>
+			<checksum>https://offshoregit.com/Eldorado/xbmc-addons/raw/master/addons.xml.md5</checksum>
+			<datadir zip="true">https://offshoregit.com/Eldorado/xbmc-addons/raw/master/repo/</datadir>
+		</dir>
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary>Install Eldorado's Addons</summary>
+		<forum>http://forums.tvaddons.ag/forums/23-ELDORADO-S-XBMC-ADDONS</forum>
 		<description>Download and install addons by Eldorado</description>
 		<platform>all</platform>
 	</extension>
@@ -121,10 +129,11 @@ Turns your XBMC into an instant free on-demand media-center. Stream and download
 
 <addon id="script.module.axel.downloader"
 	     name="Axel Downloader"
-	     version="0.1.0"
+	     version="0.2.1"
 	     provider-name="Eldorado">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
+    <import addon="script.module.addon.common" version="2.0.0" />
   </requires>
   <extension point="xbmc.python.script" library="controlpanel.py"/>
   <extension point="xbmc.python.module" library="lib" />
